[package]
name = "pveb"
version = "0.1.0"
authors = ["Payton Turnage <paytonturnage@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.33"

[dev-dependencies]
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
arbitrary = "0.4.7"
